--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
 
 		<div id="navbar" align="center">
 	        <ul id="navbarlist" align="center">
-	            <li id="tag1k">Archive.org</li>
-	            <li id="tag2k">Archive.org TV News Archive</li>
-	            <li id="tag3k">Sunk Investment</li>
-	            <li id="tag4k">Valentines to an Architect</li>
-	            <li id="tag5k">Solar Nexus</li>
-	            <li id="tag2k">Architecture for Humanity</li>
-	            <li id="tag5k">Architecture for Humanity Promotions</li>
-	            <li id="tag1k">play time</li>
+	            <li id="tag1k">urban studies & design</li>
+	            <li id="tag2k">mapping adventures</li>
+	            <li id="tag3k">advocacy campaigns</li>
+	            <li id="tag4k">architecture valentines</li>
+	            <li id="tag5k">graphic design</li>
+	            <li id="tag6k">SolarNexus sales app UI</li>
+	            <li id="tag7k">Sunk Investment product UI</li>
+	            <li id="tag8k">TVNews product UI</li>
+	            <li id="tag9k"> &#9660fun&#9660 </li>
 	        </ul>
 		</div>
 
@@ -186,8 +187,8 @@
 		<div class="section_content_box"> 
 			<img src="images/sig_works_thumb.png" width="125" alt="thumbnail" title="Substantial Works">
 			<p style="font-size: 50px">Part III. Substantial Works</p>
-			<p style="font-size: 30px"><i>information architecture & database interfacing</i></p>
-			<p style="font-size: 30px"><i>large-scale conceptual & interaction models</i></p>
+			<p style="font-size: 30px"><i>database interfacing</i></p>
+			<p style="font-size: 30px"><i>large-scale information architecture & interaction models</i></p>
 			<p style="font-size: 20px">(2013 - 2014)</p>
 
 		</div>
@@ -197,7 +198,7 @@
 	<div class="project_container" style="background-color:#F5D0A9">
 		<div class="project_content_box" >
 			<p style="font-size: 24px">Website UI Design</p>
-			<p> <i>Sunk Investment</i></p>
+			<p> <i>Sunk Investment (ongoing) </i></p>
 <!--#8 slideshow images
 			<img src="images/8_sunk_investment_1.png"
 			<img src="images/8_sunk_investment_2.png"
@@ -259,7 +260,33 @@
 			<p id="triangles">&#9660;</p>
 			<p id="triangles">&#9660;</p>
 			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
+			<div id="personal_projects" align="center">
+				<img src="images/sig_works_thumb.png" width="125" alt="thumbnail" title="Substantial Works">
+				<p style="font-size: 50px">Part &#9660. Personal Projects</p>
+				<img src="images/00_personal_1.png" width="300px"/>
+				<img src="images/00_personal_2.jpg"width="300px"/>
+				<img src="images/00_personal_3.jpg"width="300px"/>
+				<img src="images/00_personal_6.png"width="300px"/>
+				<iframe src="//player.vimeo.com/video/68447564?portrait=0" width="610" height="343" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			</div>
+			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
+			<p id="triangles">&#9660;</p>
 			<p style="color:white"><img src="images/profile.jpg" width="300px" title="Kristen Schlott" padding="10"/></p>
+			<p style="font-size:10px; color:black"> photo by Ayesha Ghosh</p>
 			<div>
 				<ul>
 					<li>site and all content, unless otherwise noted, designed + developed by Kristen Schlott</li>
@@ -270,6 +297,8 @@
 				</ul>
 			</div>
 			<p style="color:white"><a href="http://kristenschlott.com">back to KristenSchlott.com 1.0</a></p>
+		</div>
+	</div>
 
 		</div>
 	</div>
