--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
       <div class="project_container" style="background-color:#DFF6F0">
-        <div class="project_content_box" id="tag1k">
+        <div class="project_content_box tag1k">
           <p style="font-size: 24px">Urban Studies & Design</p>
           <p> <i>Washington University in St. Louis (winter 2010)</i></p>
           <p> <i>UC Berkeley (summer 2011)</i></p>
@@ -68,7 +68,7 @@
       </div>
 
       <div class="project_container" style="background-color:#A9F5E1">
-        <div class="project_content_box" id="tag2k">
+        <div class="project_content_box tag2k">
           <p style="font-size: 24px"> Mapping Adventures in the Bay Area </p>
           <p> <i>personal project (fall 2011)</i></p>
         </div>
@@ -97,7 +97,7 @@
 
 
       <div class="project_container" style="background-color:#F1EEFC">
-        <div class="project_content_box">
+        <div class="project_content_box tag3k">
           <p style="font-size: 24px"> Advocacy Campaign Creative Direction + Asset Design</p>
           <p> <i>Architecture for Humanty (spring 2012 + winter 2012)</i></p>
         </div>
@@ -123,7 +123,7 @@
 
 
       <div class="project_container" style="background-color:#E6E1FD">
-        <div class="project_content_box">
+        <div class="project_content_box tag4k">
           <p style="font-size: 24px"> Architecture Valentines Concept + Design</p>
           <p> <i>Architecture for Humanity (spring 2013)</i></p>
           <p style="font-size: 8">published online at:</p>
@@ -150,7 +150,7 @@
       </div>
 
       <div class="project_container" style="background-color:#C8CAFC">
-        <div class="project_content_box">
+        <div class="project_content_box tag5k">
           <p style="font-size: 24px">Graphic Design, Various Projects</p>
           <p><i>Architecture for Humanity (2013)</i></p>
           <p><i>freelance @ The Cellar Manager (2013)</i></p>
@@ -172,7 +172,7 @@
 
 
       <div class="project_container" style="background-color:#DEA3ED">
-        <div class="project_content_box" style="color:#585858">
+        <div class="project_content_box tag6k" style="color:#585858">
           <p style="font-size: 24px"> Mobile Sales App UI Design</p>
           <p><i>freelance @ SolarNexus (fall 2013)</i></p>
         </div>
@@ -203,7 +203,7 @@
 
 
       <div class="project_container" style="background-color:#F5D0A9">
-        <div class="project_content_box" >
+        <div class="project_content_box tag7k" >
           <p style="font-size: 24px">Website UI Design</p>
           <p> <i>Sunk Investment (ongoing) </i></p>
 
@@ -224,7 +224,7 @@
 
 
       <div class="project_container" style="background-color:#FAAC58">
-        <div class="project_content_box" style="color:#585858">
+        <div class="project_content_box tag8k" style="color:#585858">
           <p style="font-size: 24px">Digital Product UI Design</p>
           <p> <i>TV News, part of The Internet Archive (winter 2013)</i></p>
         </div>
@@ -286,7 +286,7 @@
           <p id="triangles">&#9660;</p>
           <p id="triangles">&#9660;</p>
           <p id="triangles">&#9660;</p>
-          <div id="personal_projects" align="center">
+          <div id="personal_projects" align="center" class="tag9k">
             <img src="images/sig_works_thumb.png" width="125" alt="thumbnail" title="Substantial Works">
             <p style="font-size: 50px">Part &#9660. Personal Projects</p>
             <img src="images/00_personal_1.png" width="300px"/>
