Update 2/3 pm_KS

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 	<div class="section_container">
 		<div class="section_content_box"> 
 			<img src="images/sig_works_thumb.png" width="125" alt="thumbnail" title="Substantial Works">
-			<p style="font-size: 50px">Part III. Substantial Works</p>
+			<p style="font-size: 50px">Part III. Work I Love Doing Now</p>
 			<p style="font-size: 30px"><i>database interfacing</i></p>
 			<p style="font-size: 30px"><i>large-scale information architecture & interaction models</i></p>
 			<p style="font-size: 20px">(2013 - 2014)</p>
