--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ Gathered the districts’ data from online sources and parcel information system
             <img src="images/00_personal_2.jpg"width="300px"/>
             <img src="images/00_personal_3.jpg"width="300px"/>
             <img src="images/00_personal_6.png"width="300px"/>
-            <iframe src="//player.vimeo.com/video/68447564?portrait=0" width="610" height="343" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe src="http://player.vimeo.com/video/68447564?portrait=0" width="610" height="343" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
           <p id="triangles">&#9660;</p>
           <p id="triangles">&#9660;</p>
