worm project caption

--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
         <div class="project_caption">
           <p style="font-size: 18px"><i>1.<br> 
           Biomimicry & Sustainable Design Class Project<br>
-          Washington University in St. Louis (winter 2010)<br>
-          <b>Team</b> Kristen Schlott, Kevin Murray, Chelsea Knuf, Whitney King</i>
+          Washington University in St. Louis (winter 2010)</i><br>
+          <b>team</b> Kristen Schlott, Kevin Murray, Chelsea Knuf, Whitney King
           </p>
           <p>
-          My final semester as an undergraduate, I took this graduate-level architecture class as part of a cross-disciplinary initiative from the engineering school. It was my first experience with formal design theory which ultimately . 
+          My final semester as an undergraduate, I took this graduate-level architecture class as part of a cross-disciplinary initiative from the engineering school. It was my first experience with formal design theory, which set me on the ************. 
           </p>
           <p>
-          Per the class's biomimicry curriculum, my team ( and I were charged with an in-depth inquiry into the life and times of Lumbricus terrestris - the common earthworm.<br>  
-          Afer weeks of study, we leveraged our new-found understanding of the truly fascinating and complex mechanics of earthworm locomotion into a sustainable design proposal. <br>
-          Several months of experimentation and prototyping resulted in a final proposal - a rainwater catchment facade inspired particularly by the worm's unique musculature and hydrostatic skeleton; a union of volumentric and linear expansion and contraction. <br>
-          See below select prototypes (concepts and fabrication by the whole team), and the final proposal (rendered by Kevin Murray).
-          </p>
+          My team and I were charged to make an in-depth inquiry into the life and times of Lumbricus terrestris - the common earthworm.<br>  
+          In short, the worm has hydrostatic skeleton, a large internal body cavity filled with fluid. In addition, it has a system of radial sphincter muscles which, when applied the volum of water they contain, affords its unique affinity for corporeal expansion or contraction, thus enabling it to burrow.<br>
+          Inspired by this insight, we set about several months of experimentation and prototyping, which resulted in a final proposed application for this principle - a retractable rainwater catchment facade.<br>
+          See below select prototypes (concepts and fabrication by team), and the final proposal (as rendered by Kevin Murray).
+        </p>
         </div>
        
 
