--- a/index.html
+++ b/index.html
@@ -96,11 +96,17 @@ volume of water, it retracts towards the anchor point at the top of the building
 
         <p class="project_caption">1.
 PROMPT: PROPOSE A FEASIBLE GREEN SOLUTION FOR AN URGAN ISSUE IN DOWNTOWN BERKELEY, giving consideration to the Berkeley Climate Action Plan and SB 375. In order to achieve the 2020 zero waste goal outlined in the Berkeley Climate Action Plan and comply with SB 375 regulations, the rapidly growing downtown area must address the inefficiencies of composting and recycling within commercial businesses and multi-family residential units.
-</p>
+        </p>
 
-        <div class="cycle-slideshow" data-cycle-auto-height=container>
-            <img src="images/1_urban_design_1.jpg"/ width="1000">
-            <img src="images/1_urban_design_2.jpg"/ width="1000">
+        <div class="cycle-slideshow"
+             data-cycle-auto-height=container
+             data-cycle-fx=scrollHorz
+             data-cycle-timeout=0
+             >
+          <div class="cycle-prev"></div>
+          <div class="cycle-next"></div>
+          <img src="images/1_urban_design_1.jpg" width="1000">
+          <img src="images/1_urban_design_2.jpg" width="1000">
         </div>
 
 
@@ -108,7 +114,13 @@ PROMPT: PROPOSE A FEASIBLE GREEN SOLUTION FOR AN URGAN ISSUE IN DOWNTOWN BERKELE
 METHOD | Survey land use proportions of commercial corridors to investigate whether NCD concentrations are below the threshold set in the General Plan for eating/drinking establishments. Create a procedure to measure land use concentrations & display findings.
 
 Gathered the districts’ data from online sources and parcel information system. Perform field research to verify data and document actual frontage measurements. Standardized data and internally audit Block Lot records using Access Software, then imported and geocoded data in ArcGIS. This procedure will be codified and used for all such future projects.</p>
-        <div class="cycle-slideshow" data-cycle-auto-height=container>
+        <div class="cycle-slideshow"
+             data-cycle-auto-height=container
+             data-cycle-fx=scrollHorz
+             data-cycle-timeout=0
+             >
+            <div class="cycle-prev"></div>
+            <div class="cycle-next"></div>
             <img src="images/1_urban_design_5.png"/ width="1000">
             <img src="images/1_urban_design_6.png"/ width="1000">
             <img src="images/1_urban_design_7.png"/ width="1000">
@@ -124,7 +136,13 @@ Gathered the districts’ data from online sources and parcel information system
           <p> <i>personal project (fall 2011)</i></p>
         </div>
 
-        <div class="cycle-slideshow" data-cycle-auto-height=container>
+        <div class="cycle-slideshow"
+             data-cycle-auto-height=container
+             data-cycle-fx=scrollHorz
+             data-cycle-timeout=0
+             >
+          <div class="cycle-prev"></div>
+          <div class="cycle-next"></div>
           <img src="images/2_bucket_map_1.jpg"/>
           <img src="images/2_bucket_map_2.png"/>
           <img src="images/2_bucket_map_3.png"/>
@@ -153,7 +171,12 @@ Gathered the districts’ data from online sources and parcel information system
           <p> <i>Architecture for Humanty (spring 2012 + winter 2012)</i></p>
         </div>
 
-        <div class="cycle-slideshow" data-cycle-auto-height=container>
+        <div class="cycle-slideshow"
+             data-cycle-auto-height=container
+             data-cycle-fx=scrollHorz
+             data-cycle-timeout=0 >
+          <div class="cycle-prev"></div>
+          <div class="cycle-next"></div>
           <img src="images/3_ilacamp_1.jpg"/>
           <img src="images/3_ilacamp_2.jpg"/>
           <img src="images/3_ilacamp_3.jpg"/>
@@ -162,7 +185,12 @@ Gathered the districts’ data from online sources and parcel information system
         </div>
 
         <!--#3B slideshow images -->
-        <div class="cycle-slideshow" data-cycle-auto-height=container>
+        <div class="cycle-slideshow"
+             data-cycle-auto-height=container
+             data-cycle-fx=scrollHorz
+             data-cycle-timeout=0>
+          <div class="cycle-prev"></div>
+          <div class="cycle-next"></div>
           <img src="images/5_whatsee_1.gif"/>
           <img src="images/5_whatsee_2.jpg"/>
           <img src="images/5_whatsee_3.jpg"/>
@@ -189,7 +217,12 @@ Gathered the districts’ data from online sources and parcel information system
 
 
         <!--#4 slideshow images -->
-        <div class="cycle-slideshow" data-cycle-auto-height=container>
+        <div class="cycle-slideshow"
+             data-cycle-auto-height=container
+             data-cycle-fx=scrollHorz
+             data-cycle-timeout=0>
+          <div class="cycle-prev"></div>
+          <div class="cycle-next"></div>
           <img src="images/4_valentines_1.jpg"/>
           <img src="images/4_valentines_2.jpg"/>
           <img src="images/4_valentines_3.jpg"/>
@@ -210,7 +243,13 @@ Gathered the districts’ data from online sources and parcel information system
         </div>
 
         <!--#6 slideshow images -->
-        <div class="cycle-slideshow" data-cycle-auto-height=container>
+        <div class="cycle-slideshow"
+             data-cycle-auto-height=container
+             data-cycle-fx=scrollHorz
+             data-cycle-timeout=0
+             >
+          <div class="cycle-prev"></div>
+          <div class="cycle-next"></div>
           <img src="images/6_graphics_1.jpg"/>
           <img src="images/6_graphics_2.jpg"/>
           <img src="images/6_graphics_3.jpg"/>
@@ -229,7 +268,13 @@ Gathered the districts’ data from online sources and parcel information system
         </div>
 
         <!--#7 slideshow images -->
-        <div class="cycle-slideshow" data-cycle-auto-height=container>
+        <div class="cycle-slideshow"
+             data-cycle-auto-height=container
+             data-cycle-fx=scrollHorz
+             data-cycle-timeout=0
+             >
+          <div class="cycle-prev"></div>
+          <div class="cycle-next"></div>
           <img src="images/7_solar_nexus_1.png"/>
           <img src="images/7_solar_nexus_2.png"/>
           <img src="images/7_solar_nexus_3.png"/>
@@ -260,7 +305,14 @@ Gathered the districts’ data from online sources and parcel information system
 
         </div>
         <!--#8 slideshow images -->
-        <div class="cycle-slideshow" data-cycle-auto-height=container>
+        <div class="cycle-slideshow"
+             data-cycle-auto-height=container
+             data-cycle-fx=scrollHorz
+             data-cycle-timeout=0
+             >
+          <div class="cycle-prev"></div>
+          <div class="cycle-next"></div>
+
           <img src="images/8_sunk_investment_1.png"/>
           <img src="images/8_sunk_investment_2.png"/>
           <img src="images/8_sunk_investment_3.png"/>
