Take out ghosting images

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div class="caption_h0">
           <p>My final semester as an undergraduate, I took a graduate-level architecture class as part of a cross-disciplinary initiative from the engineering school. It was my first experience with formal design theory, and ultimately set me squarely on the path towards becoming a designer, initially focused on sustainability-minded urban design. <br>
-            --- 
+            ---
           </p>
         </div>
 
@@ -116,10 +116,7 @@
         </div>
 
         <div class="cycle-slideshow"
-             data-cycle-auto-height=container
-             data-cycle-fx=scrollHorz
-             data-cycle-timeout=0
-             >
+             data-cycle-auto-height=container>
           <div class="cycle-prev"></div>
           <div class="cycle-next"></div>
           <img src="images/2_urban_design_1.jpg" width="1000">
@@ -157,8 +154,6 @@
 
         <div class="cycle-slideshow"
              data-cycle-auto-height=container
-             data-cycle-fx=scrollHorz
-             data-cycle-timeout=0
              >
           <div class="cycle-prev"></div>
           <div class="cycle-next"></div>
@@ -197,8 +192,6 @@
 
         <div class="cycle-slideshow"
              data-cycle-auto-height=container
-             data-cycle-fx=scrollHorz
-             data-cycle-timeout=0
              >
           <div class="cycle-prev"></div>
           <div class="cycle-next"></div>
@@ -252,8 +245,6 @@
 
         <div class="cycle-slideshow"
              data-cycle-auto-height=container
-             data-cycle-fx=scrollHorz
-             data-cycle-timeout=0
              >
           <div class="cycle-prev"></div>
           <div class="cycle-next"></div>
@@ -301,8 +292,6 @@
 
         <div class="cycle-slideshow"
              data-cycle-auto-height=container
-             data-cycle-fx=scrollHorz
-             data-cycle-timeout=0
              >
           <div class="cycle-prev"></div>
           <div class="cycle-next"></div>
@@ -350,8 +339,6 @@
 
         <div class="cycle-slideshow"
              data-cycle-auto-height=container
-             data-cycle-fx=scrollHorz
-             data-cycle-timeout=0
              >
           <div class="cycle-prev"></div>
           <div class="cycle-next"></div>
@@ -413,8 +400,6 @@
 
         <div class="cycle-slideshow"
              data-cycle-auto-height=container
-             data-cycle-fx=scrollHorz
-             data-cycle-timeout=0
              >
           <div class="cycle-prev"></div>
           <div class="cycle-next"></div>
@@ -472,8 +457,6 @@
 
         <div class="cycle-slideshow"
              data-cycle-auto-height=container
-             data-cycle-fx=scrollHorz
-             data-cycle-timeout=0
              >
           <div class="cycle-prev"></div>
           <div class="cycle-next"></div>
@@ -515,8 +498,6 @@
 
         <div class="cycle-slideshow"
              data-cycle-auto-height=container
-             data-cycle-fx=scrollHorz
-             data-cycle-timeout=0
              >
           <div class="cycle-prev"></div>
           <div class="cycle-next"></div>
