--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 
 
-          <li id="tag1k">1. biomimicry + sustainable design</li>
-          <li id="tag2k">2. urban design </li>
-          <li id="tag3k"><a href="#tag3k">3. SF planning dept.</a></li>
+          <li id="tag1k">1. TESTTTTT biomimicry + sustainable design</li>
+          <li id="tag2k">2. Berkeley refuse solution </li>
+          <li id="tag3k"><a href="#tag3k">3. frontage analysis</a></li>
           <li id="tag4k"><a href="#tag4k">4. mapping adventures</a></li>
           <li id="tag5k"><a href="#tag5k">5. graphic design</a></li>
           <li id="tag6k"><a href="#tag6k">6. architecture valentines</a></li>
@@ -124,10 +124,7 @@
             <td rowspan="2">
 
               <div class="cycle-slideshow"
-                   data-cycle-auto-height=container
-                   data-cycle-fx=scrollHorz
-                   data-cycle-timeout=0
-                   >
+                data-cycle-auto-height=container>
                 <div class="cycle-prev"></div>
                 <div class="cycle-next"></div>
                 <img src="images/2_urban_design_1.jpg" width="1000">
@@ -174,11 +171,7 @@
           
             <td rowspan="2">
 
-              <div class="cycle-slideshow"
-                   data-cycle-auto-height=container
-                   data-cycle-fx=scrollHorz
-                   data-cycle-timeout=0
-                   >
+              <div class="cycle-slideshow" data-cycle-auto-height=container>
                 <div class="cycle-prev"></div>
                 <div class="cycle-next"></div>
                 <img src="images/3_urban_design_1.png" width="1000">
@@ -284,8 +277,6 @@
 
               <div class="cycle-slideshow"
                    data-cycle-auto-height=container
-                   data-cycle-fx=scrollHorz
-                   data-cycle-timeout=0
                    >
                 <div class="cycle-prev"></div>
                 <div class="cycle-next"></div>
@@ -341,8 +332,6 @@
 
               <div class="cycle-slideshow"
                    data-cycle-auto-height=container
-                   data-cycle-fx=scrollHorz
-                   data-cycle-timeout=0
                    >
                 <div class="cycle-prev"></div>
                 <div class="cycle-next"></div>
@@ -402,8 +391,6 @@
 
               <div class="cycle-slideshow"
                    data-cycle-auto-height=container
-                   data-cycle-fx=scrollHorz
-                   data-cycle-timeout=0
                    >
                 <div class="cycle-prev"></div>
                 <div class="cycle-next"></div>
@@ -478,8 +465,6 @@
 
               <div class="cycle-slideshow"
                    data-cycle-auto-height=container
-                   data-cycle-fx=scrollHorz
-                   data-cycle-timeout=0
                    >
                 <div class="cycle-prev"></div>
                 <div class="cycle-next"></div>
@@ -534,8 +519,6 @@
 
               <div class="cycle-slideshow"
                    data-cycle-auto-height=container
-                   data-cycle-fx=scrollHorz
-                   data-cycle-timeout=0
                    >
                 <div class="cycle-prev"></div>
                 <div class="cycle-next"></div>
@@ -593,8 +576,6 @@
 
               <div class="cycle-slideshow"
                    data-cycle-auto-height=container
-                   data-cycle-fx=scrollHorz
-                   data-cycle-timeout=0
                    >
                 <div class="cycle-prev"></div>
                 <div class="cycle-next"></div>
@@ -676,12 +657,10 @@
 
               <div class="cycle-slideshow"
                    data-cycle-auto-height=container
-                   data-cycle-fx=scrollHorz
-                   data-cycle-timeout=0
                    >
                 <div class="cycle-prev"></div>
                 <div class="cycle-next"></div>
-                  <img src="images/00_personal_1.png" width="300px"/>
+                  <img src="images/00_personal_1.jpg" width="300px"/>
                   <img src="images/00_personal_2.jpg"width="300px"/>
                   <img src="images/00_personal_3.jpg"width="300px"/>
                   <img src="images/00_personal_6.jpg"width="300px"/>
